<resources>
    <string name="app_name">DatabaseDemo_android</string>
    <string name="add_a_new_contact">Add a new Contact</string>
    <string name="enter_employee_name">Enter First name</string>
    <string name="enter_employee_lname">Enter Last Name</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_address">Enter Address</string>
    <string name="view_contact">View Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_employee">Edit Contact</string>
    <string name="select_department">Select Department</string>
    <string name="update">Update</string>
    <string name="call">CALL</string>
    <string name="text">TEXT</string>
    <string name="email">Email</string>

</resources>