<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_ufname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_employee_name" />

        <EditText
            android:id="@+id/et_lname"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/enter_employee_lname" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone" />

        <EditText
            android:id="@+id/et_ulname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_address" />

        <Button
            android:id="@+id/btn_add_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_contact" />

        <TextView
            android:id="@+id/tv_view_employees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/view_contact"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="15dp"
        android:text="@string/add_a_new_contact"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</RelativeLayout>